[개선] 내 기록 및 종료 리포트 표시 보완